--- a/Day5/app/src/main/AndroidManifest.xml
+++ b/Day5/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.NavigationComponentExample"
+        android:theme="@style/Theme.Day5"
         tools:targetApi="31">
         <activity
             android:name=".presentations.MainActivity"
