--- a/MovieProject/app/build.gradle
+++ b/MovieProject/app/build.gradle
@@ -1,8 +1,13 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+
+    id 'kotlin-parcelize'
+    id 'com.google.devtools.ksp'
+
     id 'androidx.navigation.safeargs.kotlin'
     id 'kotlin-kapt'
+
     id 'com.google.dagger.hilt.android'
 }
 kapt {
@@ -40,6 +45,7 @@ android {
     }
     buildFeatures {
         viewBinding true
+        dataBinding true
     }
 }
 
@@ -58,6 +64,7 @@ dependencies {
 
     implementation "com.google.dagger:hilt-android:2.47"
     kapt "com.google.dagger:hilt-compiler:2.47"
+    implementation "androidx.fragment:fragment-ktx:1.6.1"
 
     // ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
@@ -70,6 +77,12 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+
+
+    def room_version = "2.5.2"
+    implementation "androidx.room:room-runtime:$room_version"
+    ksp "androidx.room:room-compiler:$room_version"
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
