--- a/MovieProject/settings.gradle
+++ b/MovieProject/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "deneme"
+rootProject.name = "Movie Project"
 include ':app'
