--- a/MovieProject/app/build.gradle
+++ b/MovieProject/app/build.gradle
@@ -5,10 +5,10 @@ plugins {
     id 'kotlin-parcelize'
     id 'com.google.devtools.ksp'
 
+    id 'com.google.dagger.hilt.android'
     id 'androidx.navigation.safeargs.kotlin'
     id 'kotlin-kapt'
 
-    id 'com.google.dagger.hilt.android'
 
 
 }
@@ -58,6 +58,7 @@ android {
 
 dependencies {
 
+    implementation 'androidx.core:core-ktx:1.10.1'
     def composeBom = platform('androidx.compose:compose-bom:2023.08.00')
     implementation composeBom
     androidTestImplementation composeBom
@@ -73,11 +74,17 @@ dependencies {
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-util'
 
+
+    implementation "com.google.dagger:hilt-android:2.47"
+    kapt "com.google.dagger:hilt-compiler:2.47"
+
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.30.1"
 
     // Android Studio Preview support
     implementation 'androidx.compose.ui:ui-tooling-preview'
     debugImplementation 'androidx.compose.ui:ui-tooling'
+
+    implementation "io.coil-kt:coil-compose:2.2.2" // For Compose integration
 
     // UI Tests
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
@@ -117,9 +124,7 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.14.2'
 
-    implementation "com.google.dagger:hilt-android:2.47"
-    kapt "com.google.dagger:hilt-compiler:2.47"
-    implementation "androidx.fragment:fragment-ktx:1.6.0"
+    implementation "androidx.fragment:fragment-ktx:1.6.1"
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.2.0-alpha01"
 
