--- a/MovieProject/app/src/main/AndroidManifest.xml
+++ b/MovieProject/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
 
 
     <application
-        android:name=".MovieApplication"
+        android:name=".MovieApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -17,6 +17,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:targetApi="31">
+
         <activity
             android:name=".MainActivity"
             android:theme="@style/AppTheme"
