--- a/MovieProject/app/build.gradle
+++ b/MovieProject/app/build.gradle
@@ -79,6 +79,7 @@ dependencies {
     kapt "com.google.dagger:hilt-compiler:2.47"
 
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.30.1"
+    implementation "com.google.accompanist:accompanist-placeholder:0.19.0"
 
     // Android Studio Preview support
     implementation 'androidx.compose.ui:ui-tooling-preview'
