--- a/MovieProject/app/build.gradle
+++ b/MovieProject/app/build.gradle
@@ -62,6 +62,10 @@ dependencies {
     def composeBom = platform('androidx.compose:compose-bom:2023.08.00')
     implementation composeBom
     androidTestImplementation composeBom
+
+    def paging_version = "3.2.0"
+    implementation "androidx.paging:paging-runtime:$paging_version"
+
     // Choose one of the following:
     // Material Design 3
     implementation 'androidx.compose.material3:material3'
