--- a/MovieProject/app/build.gradle
+++ b/MovieProject/app/build.gradle
@@ -65,6 +65,7 @@ dependencies {
 
     def paging_version = "3.2.0"
     implementation "androidx.paging:paging-runtime:$paging_version"
+    implementation "androidx.paging:paging-compose:$paging_version"
 
     // Choose one of the following:
     // Material Design 3
@@ -77,6 +78,8 @@ dependencies {
     // such as input and measurement/layout
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-util'
+
+
 
 
     implementation "com.google.dagger:hilt-android:2.47"
