--- a/MovieProject/app/build.gradle
+++ b/MovieProject/app/build.gradle
@@ -63,9 +63,9 @@ dependencies {
     implementation composeBom
     androidTestImplementation composeBom
 
-    def paging_version = "3.2.0"
+    def paging_version = "3.1.1"
     implementation "androidx.paging:paging-runtime:$paging_version"
-    implementation "androidx.paging:paging-compose:$paging_version"
+    implementation "androidx.paging:paging-compose:1.0.0-alpha16"
 
     // Choose one of the following:
     // Material Design 3
